--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,29 +13,29 @@
                 <ItemsPanelTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100" />
+                            <ColumnDefinition Width="200" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="100" />
+                            <ColumnDefinition Width="200" />
                         </Grid.ColumnDefinitions>
                     </Grid>
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
-            <StatusBarItem Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="45" Width="200">
-                <TextBlock x:Name="TB_Income" FontSize="24" Foreground="Wheat" Height="45" Width="200" TextAlignment="Center">
+            <StatusBarItem Grid.Column="0"  Height="45" Width="200">
+                <Button x:Name="buttIncome" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"> 
                     Income
-                </TextBlock>
+                </Button>
             </StatusBarItem>
-            <StatusBarItem x:Name="TB_Consumption" Grid.Column="2" Height="45" Width="200" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-                <TextBlock FontSize="24" Foreground="Wheat" Height="45" Width="200" TextAlignment="Center">
+            <StatusBarItem Grid.Column="1"  Height="45" Width="200">
+                <Button x:Name="buttConsumption" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
                     Consumption
-                </TextBlock>
+                </Button>
             </StatusBarItem>
-            <StatusBarItem x:Name="TB_Balance" Grid.Column="3" Height="45" Width="200" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-                <TextBlock FontSize="24" Foreground="Wheat" Height="45" Width="200" TextAlignment="Center">
+            <StatusBarItem Grid.Column="4"  Height="45" Width="200">
+                <Button x:Name="buttBalance" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
                     Balance
-                </TextBlock>
+                </Button>
             </StatusBarItem>
         </StatusBar>
     </Canvas>
