--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalBudget_2._0"
         mc:Ignorable="d"
-        Height="650" Width="1200" ResizeMode="NoResize" Background="{x:Null}" WindowStartupLocation="CenterScreen">
+        Height="650" Width="1200" ResizeMode="NoResize" Background="{x:Null}" WindowStartupLocation="CenterScreen"
+        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib">
 
     <Canvas x:Name="MainBackground" Background="#840D031F">
         <StatusBar Name="DataStatus" Height="45" Width="1194" Canvas.Top="1" Background="{x:Null}" VerticalAlignment="Top">
@@ -34,23 +35,27 @@
                 </Menu>
             </StatusBarItem>
             <StatusBarItem Grid.Column="1"  Height="45" Width="200">
-                <Button x:Name="buttIncome" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                <Button x:Name="buttIncome" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="IncomeClick">
                     Income
                 </Button>
             </StatusBarItem>
             <StatusBarItem Grid.Column="2"  Height="45" Width="200">
-                <Button x:Name="buttExpenses" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                <Button x:Name="buttExpenses" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="ExpensesClick">
                     Expenses
                 </Button>
             </StatusBarItem>
             <StatusBarItem Grid.Column="6"  Height="45" Width="200">
-                <Button x:Name="buttBalance" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                <Button x:Name="buttBalance" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BalanceClick">
                     Balance
                 </Button>
             </StatusBarItem>
         </StatusBar>
-        <DataGrid Name="IncomeTable" AutoGenerateColumns="True" Width="1150" Height="500" Canvas.Left="10" Canvas.Top="51" HorizontalAlignment="Center" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}">
-
+        <DataGrid Name="ViewTable" Foreground="Wheat" AutoGenerateColumns="True" Width="1000" Height="500" Canvas.Left="100" Canvas.Top="50" HorizontalAlignment="Center" VerticalAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}" FontSize="24" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="{x:Null}" />
+                </Style>
+            </DataGrid.RowStyle>
         </DataGrid>
         <StatusBar x:Name="DataStatus_Copy" Height="45" Width="1194" Canvas.Top="556" Background="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Top">
             <StatusBar.ItemsPanel>
@@ -69,12 +74,12 @@
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
             <StatusBarItem Grid.Column="0">
-                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}">
+                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}" Click="addNew">
                     Add
                 </Button>
             </StatusBarItem>
             <StatusBarItem Grid.Column="1">
-                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}">
+                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}" Click="removeItem">
                     Remove
                 </Button>
             </StatusBarItem>
