--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,85 +4,84 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalBudget_2._0"
-        mc:Ignorable="d"
-        Height="650" Width="1200" ResizeMode="NoResize" Background="{x:Null}" WindowStartupLocation="CenterScreen"
+        Height="720" Width="1080" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        AllowsTransparency="True" Background="Transparent"
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib">
 
-    <Canvas x:Name="MainBackground" Background="#840D031F">
-        <StatusBar Name="DataStatus" Height="45" Width="1194" Canvas.Top="1" Background="{x:Null}" VerticalAlignment="Top">
-            <StatusBar.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100" />
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="200" />
-                        </Grid.ColumnDefinitions>
-                    </Grid>
-                </ItemsPanelTemplate>
-            </StatusBar.ItemsPanel>
-            <StatusBarItem  Grid.Column="0" Height="45" Width="100" Background="{x:Null}" >
-                <Menu Height="40" Width="100" Foreground="Wheat" Background="{x:Null}" FontSize="24" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-                    <MenuItem Header="Menu" Height="39" Width="90" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}">
-                        <MenuItem Header="_Setting" Foreground="Black"/>
-                        <Separator />
-                        <MenuItem Header="_Exit" Foreground="Black"/>
-                    </MenuItem>
-                </Menu>
-            </StatusBarItem>
-            <StatusBarItem Grid.Column="1"  Height="45" Width="200">
-                <Button x:Name="buttIncome" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="IncomeClick">
-                    Income
-                </Button>
-            </StatusBarItem>
-            <StatusBarItem Grid.Column="2"  Height="45" Width="200">
-                <Button x:Name="buttExpenses" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="ExpensesClick">
-                    Expenses
-                </Button>
-            </StatusBarItem>
-            <StatusBarItem Grid.Column="6"  Height="45" Width="200">
-                <Button x:Name="buttBalance" Height="40" Width="200" Foreground="Wheat" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BalanceClick">
-                    Balance
-                </Button>
-            </StatusBarItem>
-        </StatusBar>
-        <DataGrid Name="ViewTable" Foreground="Wheat" AutoGenerateColumns="True" Width="1000" Height="500" Canvas.Left="100" Canvas.Top="50" HorizontalAlignment="Center" VerticalAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}" FontSize="24" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <Setter Property="Background" Value="{x:Null}" />
-                </Style>
-            </DataGrid.RowStyle>
-        </DataGrid>
-        <StatusBar x:Name="DataStatus_Copy" Height="45" Width="1194" Canvas.Top="556" Background="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <StatusBar.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="200" />
-                        </Grid.ColumnDefinitions>
-                    </Grid>
-                </ItemsPanelTemplate>
-            </StatusBar.ItemsPanel>
-            <StatusBarItem Grid.Column="0">
-                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}" Click="addNew">
-                    Add
-                </Button>
-            </StatusBarItem>
-            <StatusBarItem Grid.Column="1">
-                <Button Height="40" Width="200" FontSize="24" Foreground="Wheat" Background="{x:Null}" BorderBrush="{x:Null}" Click="removeItem">
-                    Remove
-                </Button>
-            </StatusBarItem>
-        </StatusBar>
-    </Canvas>
+    <Border Background="#eff2f7" CornerRadius="30">
+
+        <Canvas x:Name="MainBackground" Margin="10,10,10,10">
+            <StatusBar Name="DataStatus" Height="45" Width="1060" Canvas.Top="1" VerticalAlignment="Top">
+                <StatusBar.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100" />
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="200" />
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </StatusBar.ItemsPanel>
+                <StatusBarItem  Grid.Column="0" Height="45" Width="100" Background="{x:Null}" >
+                    <Menu Height="40" Width="100" Background="{x:Null}" FontSize="24" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                        <MenuItem Header="Menu" Height="39" Width="90" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}">
+                            <MenuItem Header="_Setting"/>
+                            <Separator />
+                            <MenuItem Header="_Exit" Click="exitApp"/>
+                        </MenuItem>
+                    </Menu>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="1"  Height="45" Width="200">
+                    <Button x:Name="buttIncome" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="IncomeClick">
+                        Income
+                    </Button>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="2"  Height="45" Width="200">
+                    <Button x:Name="buttExpenses" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="ExpensesClick">
+                        Expenses
+                    </Button>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="6"  Height="45" Width="200">
+                    <Button x:Name="buttBalance" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BalanceClick">
+                        Balance
+                    </Button>
+                </StatusBarItem>
+            </StatusBar>
+            <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Name="ViewTable" Width="1040" Height="574" Canvas.Left="10" Canvas.Top="46" VerticalAlignment="Center">
+
+            </DataGrid>
+            <StatusBar x:Name="DataStatus_Copy" Height="45" Width="1060" Canvas.Top="628.616" Background="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <StatusBar.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="200" />
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </StatusBar.ItemsPanel>
+                <StatusBarItem Grid.Column="0">
+                    <Button Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="addNew">
+                        Add
+                    </Button>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="1">
+                    <Button Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="removeItem">
+                        Remove
+                    </Button>
+                </StatusBarItem>
+            </StatusBar>
+        </Canvas>
+    </Border>
 </Window>
