--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -37,17 +37,17 @@
                     </Menu>
                 </StatusBarItem>
                 <StatusBarItem Grid.Column="1"  Height="45" Width="200">
-                    <Button x:Name="buttIncome" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="IncomeClick">
+                    <Button x:Name="buttIncome" Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="IncomeClick">
                         Income
                     </Button>
                 </StatusBarItem>
                 <StatusBarItem Grid.Column="2"  Height="45" Width="200">
-                    <Button x:Name="buttExpenses" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="ExpensesClick">
+                    <Button x:Name="buttExpenses" Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="ExpensesClick">
                         Expenses
                     </Button>
                 </StatusBarItem>
                 <StatusBarItem Grid.Column="6"  Height="45" Width="200">
-                    <Button x:Name="buttBalance" Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BalanceClick">
+                    <Button x:Name="buttBalance" Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BalanceClick">
                         Balance
                     </Button>
                 </StatusBarItem>
@@ -62,7 +62,7 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="200" />
                                 <ColumnDefinition Width="200" />
-                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="200" />
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="200" />
@@ -72,12 +72,17 @@
                     </ItemsPanelTemplate>
                 </StatusBar.ItemsPanel>
                 <StatusBarItem Grid.Column="0">
-                    <Button Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="addNew">
+                    <Button Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="addNew">
                         Add
                     </Button>
                 </StatusBarItem>
                 <StatusBarItem Grid.Column="1">
-                    <Button Height="40" Width="200" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="removeItem">
+                    <Button Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="editItem">
+                        Edit
+                    </Button>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="2">
+                    <Button Height="39" Width="190" FontSize="24" Background="{x:Null}" BorderBrush="{x:Null}" Click="removeItem">
                         Remove
                     </Button>
                 </StatusBarItem>
