--- a/AddExpense.xaml
+++ b/AddExpense.xaml
@@ -22,8 +22,8 @@
 
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Product"/><Run Text=" = "/></TextBlock>
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="2" ><Run Text="Money"/><Run Text=" = "/></TextBlock>
-            <TextBox x:Name="ProductInp" Text="{Binding product}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" Foreground="Black" Grid.Row="1" />
-            <TextBox x:Name="MoneyInp" Text="{Binding money}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" Foreground="Black" Grid.Row="2" />
+            <TextBox x:Name="ProductInp" Text="{Binding product}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
+            <TextBox x:Name="MoneyInp" Text="{Binding money}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="2" />
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
                 <Button IsDefault="True" Click="Accept_Click" MinWidth="60" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Add">
                     <Button.Resources>
