--- a/EditExp.xaml
+++ b/EditExp.xaml
@@ -21,10 +21,10 @@
 
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Product"/><Run Text=" = "/></TextBlock>
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="2" ><Run Text="Money"/><Run Text=" = "/></TextBlock>
+            <TextBlock x:Name="TB_ProductOut" Margin="10,10,8,10" RenderTransformOrigin ="0.49,0.142" Grid.Column="1" FontSize="20" Foreground="#CAADADAD" TextAlignment="Center" Grid.Row="1" />
             <TextBox x:Name="ProductInp" Text="{Binding product}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
-            <TextBlock x:Name="TB_ProductOut" Margin="10,10,8,10" RenderTransformOrigin ="0.49,0.142" Grid.Column="1" FontSize="20" Foreground="Black" TextAlignment="Center" Grid.Row="1" ></TextBlock>
+            <TextBlock x:Name="TB_MoneyOut" Margin="10,10,8,10" RenderTransformOrigin ="0.49,0.142" Grid.Column="1" FontSize="20" Foreground="#CAADADAD" TextAlignment="Center" Grid.Row="2" />
             <TextBox x:Name="MoneyInp" Text="{Binding money}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="2" />
-            <TextBlock x:Name="TB_MoneyOut" Margin="10,10,8,10" RenderTransformOrigin ="0.49,0.142" Grid.Column="1" FontSize="20" Foreground="Black" TextAlignment="Center" Grid.Row="2" ></TextBlock>
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
                 <Button IsDefault="True" Click="Accept_Click" MinWidth="60" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Edit">
                     <Button.Resources>
