--- a/EditInc.xaml
+++ b/EditInc.xaml
@@ -21,7 +21,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Money"/><Run Text=" = "/></TextBlock>
-
+            <TextBlock x:Name="TB_MoneyOut" Margin="10,10,8,10" RenderTransformOrigin ="0.49,0.142" Grid.Column="1" FontSize="20" Foreground="#CAADADAD" TextAlignment="Center" Grid.Row="1" />
             <TextBox x:Name="MoneyInp" Text="{Binding money}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
