--- a/RemoveElement.xaml
+++ b/RemoveElement.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PersonalBudget_2._0"
         Title="RemoveElement" Height="200" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None"
         AllowsTransparency="True" Background="Transparent">
-    <Border CornerRadius="20" Background="#b9dfff">
+    <Border CornerRadius="20" Background="#faded0">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition />
@@ -21,20 +21,20 @@
 
             <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Search"/><Run Text=" = "/></TextBlock>
 
-            <TextBox x:Name="SearchInp" Text="{Binding searchElement}" Grid.Column="1" Margin="10,10,8,10" Background="#4113DC1C" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
+            <TextBox x:Name="SearchInp" Text="{Binding searchElement}" Grid.Column="1" Margin="10,10,8,10" Background="White" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
-                <Button IsDefault="True" Click="Search_Click" MinWidth="60" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Search">
+                <Button IsDefault="True" Click="Search_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Search">
                     <Button.Resources>
                         <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="10"/>
+                            <Setter Property="CornerRadius" Value="0"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button IsCancel="True" MinWidth="60" Margin="5,0,5,5.4" Width="101" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
+                <Button IsCancel="True" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
                     <Button.Resources>
                         <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="10"/>
+                            <Setter Property="CornerRadius" Value="0"/>
                         </Style>
                     </Button.Resources>
                 </Button>
