#Creating a check for a new month

--- a/AddIncome.xaml
+++ b/AddIncome.xaml
@@ -19,7 +19,7 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Money"/><Run Text=" = "/></TextBlock>
+            <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Money"/><Run Text=" + "/></TextBlock>
 
             <TextBox x:Name="MoneyInp" Text="{Binding money}" Grid.Column="1" Margin="10,10,8,10" Background="White" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
 
